# fastapi-template

./: .env.template  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_06_18_1548-d68e327f3da2_.py  2023_06_21_1807-e75479157b3c_.py
src/: main.py
src/api/: __init__.py
src/api/v1/: __init__.py  authentication.py  session.py  user.py
src/api/v1/admin/: __init__.py  session.py  user.py
src/core/: __init__.py  base.py  database.py  dependencies.py  settings.py
src/crud/: base.py  session.py  user.py
src/managers/: base.py  session.py  user.py
src/models/: __init__.py  session.py  user.py
src/schemas/: login_response.py  session.py  token.py  user.py
src/utils/: __init__.py  app_types.py  decorators.py  password_helper.py  token_helper.py
src/utils/app_exceptions/: crud.py  manager.py
tests/: conftest.py  test_api_authentication.py  test_api_sessions.py  test_crud.py  test_decorators.py  test_password_helper.py
tests/factories/: session_factory.py  user_factory.py
tests/fixtures/: crud_fixtures.py  manager_fixtures.py  password_helper_fixtures.py
