[tool.poetry]
name = "store"
version = "0.1.0"
description = ""
authors = ["vaniamaksimov <vaniamaksimov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.16"
alembic = "^1.11.1"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
pydantic = {extras = ["email"], version = "^1.10.9"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
aiosqlite = "^0.19.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.1"
asgi-lifespan = "^2.1.0"
factory-boy = "^3.2.1"
sqlparse = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests",]
filterwarnings = ["ignore:DeprecationWarning",]
norecursedirs = [".venv", "alembic",]
python_files = ["test_*.py",]
python_functions = ["test_*",]
pythonpath = [".", "src",]
addopts = ["-vv", "-p", "no:cacheprovider", "--tb=long"]
asyncio_mode = "auto"
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = "True"